lab1/Test/L1-A-12-57.cmm
float fdOIYZX73Vv0X [ 1964074689 #] 
;
int q0 ( ) {
  if ( XJcqatp `)   if ( iYdipCsoiOj )   WjNjTyHDwz8mN1 
    ;
else   return Iyc8b1ZGEGHWtTs36g ;


{
    int FJBIAMqgAEUlZ0X ;
    struct aKSdS2iOjsOu {
    }eyy4 ;
    struct {
    }c ;
    int lBpxpu0GRp , KdDrd7Jx6 ;
    int FkhvUGG0D = fYubYeipiCjBtmL = rkOP || Se != 
      HVFfNkdQoiEfOi + GfMb_JSIK64R7dghY1 * ! _mZqLDAAd0mobCsJPQE2 
      [ ESTvfnvB && d0dCHrr <= KeRaY - mQ / - FvNQsfCLNkJc_6NdFn 
      ( OPzLqJM_Vrgm3C10QBk , vXJkZARDId2i = i695 && ! AYxfQKN2 
      ( HMGkhTuoHvrizVirYjed < Q6LNoLzaw6oGimyJhcE + ! ( 
      fYt0oddLH145nm9n0 = jyg || SrUI4eHV > tuaYu == Yo3tLRGlkXxxSr4jxJNf 
      . TxYpLFrnn64KCgPFV9o ) ) * 1917035071.1572101451 
      . tq0tNBJ5l_hju5 + 1782986630 . >= bY6emfiVddI ( ) 
      ) ] ;
  }}
int ;
int PfE5vklopm945iPb ( int P ) {
}
struct oL5aKbsTr5fbWQUlVi2C %;
int NOD5IiByH_vdnC670 , REmpYX_Koqkf 

;
int X9WpQQwiuNTh63ri ( int P9MNVUCadOUfOXRViX , int 
  ykAamGplIotVha ) @{
}
int HrKKZx ( ) {
  while ( HbX )   HZhWKe7Jhe96V5hs79 ;

}
int ;
int ;
int 'qJ ( ) {
}
int SMDSF ( ) {
}
int VFwD6n_6BM982u ( ) {
  if ( uOWRqNwcY )   rn_SKJtMim6mht ;
else   if ( CrFscpLUWuQsfNs3U )   hZv ;


}
int ;
